client/app/main/dashboard/dashboard.scss
.dashboard                        { padding: 30px;
  .bottom-link                    {
    .text-right                   { padding-right: 0; }
  }
  .shadowed-container             { margin-bottom: 30px; position: relative;
    &.campaigns                   {
      .th                         {
        &:nth-child(1)            { width: 45%; }
        &:nth-child(2)            { width: 40%; }
        &:nth-child(3)            { width: 15%; }
      }
    }
    &.updates                     {
      .th                         {
        &:nth-child(1)            { width: 30%; }
        &:nth-child(2)            { width: 70%; }
      }
    }
    .grayout                      { background: $headerbg; height: calc(100% - 50px); left: 0; opacity: .5; position: absolute; top: 50px; width: 100%; z-index: 10; }
  }
  .table                          {
    .tr                           {
      .th                         { font-size: 14px; }
      .th,
      .td                         { height: 65px; padding: 0 10px;
        &:first-child             { padding-left: 20px; }
        &:last-child              { padding-right: 20px; }
      }
    }
    .status                       {
      &.new,
      &.current                   { color: $green; }
      &.inprogress,
      &.expiring                  { color: $orange; }
      &.cancelled                 { color: $red; }
      &.fulfilled,
      &.expired                   { color: $lightgray; }
    }
  }
  .calendar-overflow              { overflow: auto; }
  .calendar-widget                { color: $lightgray; position: relative; width: 6300px;
    .cal-row                      { border-bottom: 1px solid $lightgray; height: calc(260px / 6); position: relative;
      &:last-child                { border-bottom: none; }
      .booked                     { padding: 4px; height: 100%; position: absolute; top: 0px;
        span                      { display: block; font-size: 14px; line-height: 36px; text-align: center; }
        &.active                  { background: $reservation-active; color: $white; }
        &.closed                  { background: $reservation-closed; color: $reservation-gray; }
        &.pending                 { background: $reservation-pending; color: $white; }
      }
    }
    ul.cal-row                    { color: $black; display: table; font: 500 14px $serif-font; list-style: none; margin: 0; padding: 0; width: 100%;
      li                          { display: table-cell; height: 65px; vertical-align: middle; text-align: center; white-space: nowrap; }
    }
  }
}

